validation-checks-and-swagger-settings-add-ons