@@ -273,11 +273,11 @@ class ProductServiceTest {
 
         verify(productRepositoryMock, times(1)).findTop10Products(sort);
         assertEquals(1, actualProductCountDto.size());
-        assertNotNull(actualProductCountDto.get(0));
-        assertEquals(productCountDto.getProductId(), actualProductCountDto.get(0).getProductId());
-        assertEquals(productCountDto.getName(), actualProductCountDto.get(0).getName());
-        assertEquals(productCountDto.getCount(), actualProductCountDto.get(0).getCount());
-        assertEquals(productCountDto.getSum(), actualProductCountDto.get(0).getSum());
+        assertNotNull(actualProductCountDto.getFirst());
+        assertEquals(productCountDto.getProductId(), actualProductCountDto.getFirst().getProductId());
+        assertEquals(productCountDto.getName(), actualProductCountDto.getFirst().getName());
+        assertEquals(productCountDto.getCount(), actualProductCountDto.getFirst().getCount());
+        assertEquals(productCountDto.getSum(), actualProductCountDto.getFirst().getSum());
     }
 
     @Test
@@ -290,9 +290,9 @@ class ProductServiceTest {
         Sort sortObject = orderBy("name", true);
         when(productRepositoryMock.findProductsByFilter(hasCategory,categoryId,minPrice,maxPrice,hasDiscount,sortObject)).thenReturn(List.of(product));
         List<Product> actualProductResponseDto = productRepositoryMock.findProductsByFilter(hasCategory,categoryId,minPrice,maxPrice,hasDiscount,sortObject);
-        assertTrue(actualProductResponseDto.size() > 0);
+        assertFalse(actualProductResponseDto.isEmpty());
         verify(productRepositoryMock, times(1)).findProductsByFilter(hasCategory,categoryId,minPrice,maxPrice,hasDiscount,sortObject);
-        assertEquals(product.getProductId(),actualProductResponseDto.get(0).getProductId());
+        assertEquals(product.getProductId(),actualProductResponseDto.getFirst().getProductId());
     }
 
     @Test
@@ -339,11 +339,11 @@ class ProductServiceTest {
         List <ProductPendingDto> actualProductPendingDto = productServiceMock.findProductPending(day);
         verify(productRepositoryMock, times(1)).findProductPending(day);
         assertEquals(1, actualProductPendingDto.size());
-        assertNotNull(actualProductPendingDto.get(0));
-        assertEquals(productPendingDto.getProductId(), actualProductPendingDto.get(0).getProductId());
-        assertEquals(productPendingDto.getName(), actualProductPendingDto.get(0).getName());
-        assertEquals(productPendingDto.getCount(), actualProductPendingDto.get(0).getCount());
-        assertEquals(productPendingDto.getCreatedAt(), actualProductPendingDto.get(0).getCreatedAt());
+        assertNotNull(actualProductPendingDto.getFirst());
+        assertEquals(productPendingDto.getProductId(), actualProductPendingDto.getFirst().getProductId());
+        assertEquals(productPendingDto.getName(), actualProductPendingDto.getFirst().getName());
+        assertEquals(productPendingDto.getCount(), actualProductPendingDto.getFirst().getCount());
+        assertEquals(productPendingDto.getCreatedAt(), actualProductPendingDto.getFirst().getCreatedAt());
     }
 
     @Test
@@ -376,9 +376,9 @@ class ProductServiceTest {
         List <ProductProfitDto> actualProductProfitDto = productServiceMock.findProductProfit(period,interval);
         verify(productRepositoryMock, times(1)).findProfitByPeriod(period,interval);
         assertEquals(1, actualProductProfitDto.size());
-        assertNotNull(actualProductProfitDto.get(0));
-        assertEquals(productProfitDto.getPeriod(), actualProductProfitDto.get(0).getPeriod());
-        assertEquals(productProfitDto.getSum(), actualProductProfitDto.get(0).getSum());
+        assertNotNull(actualProductProfitDto.getFirst());
+        assertEquals(productProfitDto.getPeriod(), actualProductProfitDto.getFirst().getPeriod());
+        assertEquals(productProfitDto.getSum(), actualProductProfitDto.getFirst().getSum());
 
     }
     private Sort orderBy(String sort, Boolean ascending) {
